Updated humidity.html to have navbar perform correctly when page is scaled down, CSS has also been updated with formatting for navbar-collapse.

--- a/pages/style.css
+++ b/pages/style.css
@@ -25,11 +25,12 @@ body {
     margin-left: 5%;
   }
   
-  .navbar-collapse {
+  /*!.navbar-collapse {
     position: absolute;
     right: 5%;
     font-size: small;
   }
+  */
   
   .nav-item {
     font-weight: bold;
@@ -107,4 +108,23 @@ body {
     .col-md-8 {
       display: block;
     }
+  }
+
+  .navbar-nav {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+  }
+
+  .navbar-collapse {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-align: center;
+    align-items: center;
   }
